# adventofcode

./: .gitignore  x1.cabal
app/: Main.hs
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
