cabal-version:      2.4
name:               x1
version:            0.1.0.0

author:             Peeter Kask
maintainer:         peeter@kask.dev

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Day1,
        Day2
    build-depends:
        base ^>=4.17.0.0,
        split
    hs-source-dirs:   src
    default-language: Haskell2010

executable x1
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        x1
    hs-source-dirs:   app
    default-language: Haskell2010
